<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Playerprofile.HelpdeskActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rulesmailbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:fontFamily="@font/bungee"
                android:gravity="center_horizontal"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule1"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule2"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule3"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule4"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule5"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redeemQueries"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:fontFamily="@font/bungee"
                android:gravity="center_horizontal"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rquery1"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rquery2"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/rulesmailbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Email Us"
        app:backgroundTint="@color/s_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>