<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Minimilitia.miniMatchActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/m_detailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/y_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/coustom_card_white">

            <TextView
                android:id="@+id/m_matchnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/match_number"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_mmatchnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@id/m_matchnum"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/v_mmatchnum"
                android:text="at"
                android:textColor="@color/hint_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/v_mdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/m_at"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_1stprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_mdate"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:text="@string/_1st_prize"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_m1stprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_1stprize"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_below="@+id/m_1stprize"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/v_m1stprize"
                android:src="@drawable/gcoinlogo" />

            <TextView
                android:id="@+id/m_2ndprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_mdate"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_toEndOf="@id/m_1stprize"
                android:text="@string/_2nd_prize"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_m2ndprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_2ndprize"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_toEndOf="@id/m_1stprize"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_below="@+id/m_2ndprize"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/v_m2ndprize"
                android:src="@drawable/gcoinlogo" />

            <TextView
                android:id="@+id/m_3rdprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_mdate"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/m_2ndprize"
                android:text="@string/_3rd_prize"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_m3rdprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/m_3rdprize"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_toEndOf="@id/m_2ndprize"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_below="@+id/m_3rdprize"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/v_m3rdprize"
                android:src="@drawable/gcoinlogo" />

            <TextView
                android:id="@+id/m_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_m1stprize"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/type"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_mtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/m_type"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_m2ndprize"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/m_1stprize"
                android:text="@string/map"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_mmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_map"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/m_1stprize"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_killprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_m3rdprize"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/m_2ndprize"
                android:text="@string/per_kill"
                android:textColor="@color/hint_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/v_mkillprize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m_killprize"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/m_2ndprize"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_below="@+id/m_killprize"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/v_mkillprize"
                android:src="@drawable/gcoinlogo" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/m_joinbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/coustom_btn"
        android:includeFontPadding="false"
        android:text="@string/join"
        android:textSize="16sp"
        app:backgroundTint="@color/buttonclr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_detailsCard" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_joinbtn">

        <Button
            android:id="@+id/m_roomid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/coustom_btn"
            android:includeFontPadding="false"
            android:text="@string/room_id"
            android:textSize="16sp"
            app:backgroundTint="@color/buttonclr" />

        <Button
            android:id="@+id/m_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/coustom_btn"
            android:includeFontPadding="false"
            android:text="@string/rules"
            android:textSize="16sp"
            app:backgroundTint="@color/buttonclr" />

        <Button
            android:id="@+id/m_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/coustom_btn"
            android:includeFontPadding="false"
            android:text="@string/entries"
            android:textSize="16sp"
            app:backgroundTint="@color/buttonclr" />

    </LinearLayout>

    <TextView
        android:id="@+id/miniplaystore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorAccent"
        android:text="@string/mini_playstore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/minihint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorAccent"
        android:text="@string/gameinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miniplaystore" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorAccent"
        android:text="@string/timingsinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minihint2" />


    <ProgressBar
        android:id="@+id/miniProg"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/mstartlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roomidAvailable"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>